--- a/assemblyinfo.csproj
+++ b/assemblyinfo.csproj
@@ -6,7 +6,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove=".gitignore" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="7.0.0" />
   </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="echo &quot;=== Greetings from Post-build event ===&quot;&#xD;&#xA;echo &quot;---&gt; Copying files ...&quot;&#xD;&#xA;xcopy  &quot;$(ProjectDir)appdata\assemblyinfodiff.sh&quot; &quot;$(TargetDir)&quot; /Y" />
+  </Target>
 
 </Project>
